--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next-auth": "^4.24.10",
-    "antd": "^5.22.2",
     "@ant-design/icons": "^5.5.1",
-    "@ant-design/nextjs-registry": "^1.0.1"
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "antd": "^5.22.2",
+    "https-proxy-agent": "^7.0.6",
+    "next": "14.2.18",
+    "next-auth": "^4.24.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.18"
+    "eslint-config-next": "14.2.18",
+    "typescript": "^5.6.3"
   }
 }
-
