--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.22.2",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "ethers": "^6.16.0",
     "next": "14.2.18",
     "react": "^18.3.1",
